Spacing fixes, externalLink styling on tablet

--- a/styles/_component.scss
+++ b/styles/_component.scss
@@ -149,6 +149,10 @@
         display: none;
     }
 
+    .cmp-externalLinks.contactMe {
+        display: none;
+    }
+
     .cmp-externalLinks.fixed {
         display: flex;
         flex-direction: column;
