--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -210,8 +210,8 @@ main {
 .contact {
     display: grid;
     grid-template-rows: 90% 10%;
-    height: 90vh;
     margin: 2em;
+    height: 40em;
     place-items: center;
     text-align: center;
 
@@ -268,4 +268,20 @@ main {
     .contact {
         grid-template-rows: 95% 5%;
     }
+
+    .about {
+        &__container {
+            display: flex;
+        }
+
+        &__bio {
+            flex-basis: 50%;
+        }
+
+        &__skillsContainer {
+            flex-basis: 50%;
+            margin: 1em 0 0 1em;
+        }
+    }
+    
 }
